resources/ambient/service-shadow.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    networking.istio.io/traffic-distribution: PreferClose
  creationTimestamp: "2025-11-20T18:44:28Z"
  labels:
    gateway.istio.io/managed: istio.io-mesh-controller
    gateway.networking.k8s.io/gateway-name: waypoint
  name: test
  namespace: hotel
  ownerReferences:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    kind: Gateway
    name: waypoint
    uid: e9f1a555-45f9-4f53-9054-39064c7210a9
  resourceVersion: "2889072"
  uid: ca6b9832-b11b-47dd-bde4-af898e83c80d
spec:
  clusterIP: 10.101.124.70
  clusterIPs:
  - 10.101.124.70
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: PreferDualStack
  ports:
  - appProtocol: tcp
    name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - appProtocol: hbone
    name: mesh
    port: 15008
    protocol: TCP
    targetPort: 15008
  selector:
    gateway.networking.k8s.io/gateway-name: waypoint
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
